--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,13 +1,2 @@
 spring.application.name=employee-service
-
-spring.datasource.url =jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=admin
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-server.port=8081
-feign.client.config.default.loggerLevel=full
-
-eureka.instance.client.serverUrl.defaultZone = http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
