--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include=busrefresh
+
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p
+[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web = DEBUG
