--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,14 +1,30 @@
 spring.application.name=employee-service
 spring.config.import=optional:configserver:http://localhost:8888
+server.port=8081
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-management.endpoints.web.exposure.include=busrefresh
+management.endpoints.web.exposure.include=busrefresh,health
 
 management.tracing.sampling.probability=1.0
 logging.pattern.level=%5p
 [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web = DEBUG
+
+management.health.circuitbreakers.enabled=true
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.failure-rate-threshold=20
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.minimum-number-of-calls=3
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.wait-duration-in-open-state.seconds=5
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.employeeServiceCircuitBreaker.sliding-window-type=COUNT_BASED
+
+resilience4j.retry.instances.employeeServiceRetry.max-attempts=3
+resilience4j.retry.instances.employeeServiceRetry.wait-duration=500ms
