--- a/organization-service/src/main/resources/application.properties
+++ b/organization-service/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=organization-service
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8083
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+management.endpoints.web.exposure.include=busrefresh,health
+
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p
+[${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web = DEBUG
