--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/employees/**
 spring.cloud.gateway.mvc.routes[1].id = department-service
 spring.cloud.gateway.mvc.routes[1].uri = lb://department-service
 spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/departments/**
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:3000
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+
